# sbom-check

./: CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
examples/: sample-invalid.spdx.json  sample-valid.spdx.json
src/sbom_check/: __init__.py  cli.py  engine.py  models.py
src/sbom_check/config/: __init__.py  loader.py  models.py
src/spdx_validator/: __init__.py  cli.py  engine.py  models.py  validators.py
tests/: conftest.py
tests/unit/sbom_check/: test_cli.py  test_config_loader.py  test_engine.py  test_models.py
tests/unit/spdx_validator/: test_spdx_engine.py  test_spdx_models.py  test_validators.py
